fixed errors, added FAQ, added favicon, fixed background

--- a/_troubleshooting/v2.md
+++ b/_troubleshooting/v2.md
@@ -1,6 +1,6 @@
 ---
 layout: splash
-title: "Frequently Asked Questions"
+title: "Troubleshooting"
 permalink: /troubleshooting/v2/
 classes: wide
 header:
