fixed up FAQs, cookie consent, Privacy, fixed tutorial format

--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -199,3 +199,18 @@ Issues with Junk Store itself? This section covers general plugin problems — f
   </p>
 </details>
 
+<details class="troubleshooting-box">
+  <summary>Having issues bringing up the keyboard in Game Mode?</summary>
+  <p>
+    If the <strong>Steam + X</strong> shortcut isn’t bringing up the keyboard try the following:
+  </p>
+  <ul>
+    <li>Try to bring up the keyboard ⌨️ from the Quick Access Menu (<strong>⋯</strong>).</li>
+    <li>Tap directly on a text field (like a password box) to prompt the keyboard.</li>
+    <li>Try toggling to Desktop Mode and back to Game Mode to reset input services.</li>
+    <li>Restart Steam or the device if the issue persists.</li>
+  </ul>
+  <p>
+    This is a known Steam bug that has been around for a while. These steps usually help work around it until Valve fixes it in a future update.
+  </p>
+</details>
