fixed incorrect link from button

--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -9,7 +9,7 @@ header:
   overlay_image: /assets/images/website_image.jpg
   actions:
     - label: "Buy Now"
-      url: "/comingsoon/"
+      url: "/buy_now/"
       class: "button buy-button"
 ---
 <div class="spacer mt-4"></div>
