updated FAQ and Troubleshooting how to open Junk Store

--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -24,7 +24,7 @@ Issues with Junk Store itself? This section covers general plugin problems — f
   <br>
   <strong>To generate extensions:</strong>
   <ol>
-    <li>Open Junk Store and press <strong>L3 + R3</strong> to open the plugin menu.</li>
+    <li>Open Junk Store by pushing <strong>Select</strong> button above the D-pad.</li>
     <li>Make sure you're logged in to your Junk Store account.</li>
     <li>Scroll down to the <strong>Tools</strong> section.</li>
     <li>Open the sliders menu (☰) next to the search bar and select <strong>Download All Presets from Server</strong>.</li>
