committing as created a new branch for stuff

--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -1,7 +1,7 @@
 ---
 layout: splash
 title: "Troubleshooting"
-permalink: /troubleshooting/v2/
+permalink: /2.0-troubleshooting/
 classes: wide
 header:
   overlay_color: "#000"
@@ -17,7 +17,7 @@ header:
 Issues with Junk Store itself? This section covers general plugin problems — from install issues to launch errors and everything in between.
 
 <details class="troubleshooting-box">
-  <summary>I don't have any extensions—what do I do?</summary>
+  <summary>I don't have any extensions, what do I do?</summary>
   <p></p>
     If you don’t see any extensions, you’ll need to generate them. Currently, Junk Store supports extensions for <strong>Epic</strong>, <strong>GOG</strong>, and <strong>Amazon</strong>.
   <br>
@@ -200,4 +200,20 @@ Issues with Junk Store itself? This section covers general plugin problems — f
     </ul>
     <strong>Check ProtonDB:</strong><br>
       If the game still won’t launch, visit <a href="https://www.protondb.com" target="_blank" rel="noopener">ProtonDB.com</a> for community tips. You may find game-specific tweaks, compatibility reports, or Proton version recommendations that solve your issue.
+</details>
+
+<details class="troubleshooting-box">
+  <summary>Installed a game on the new version and can't see it in the Decky one?</summary>
+  <p></p>
+    The new version of Junk Store uses a different system, so games installed there won’t show up in the older Decky version — and can’t be moved over.
+  <br>
+  <br>
+    If you’re switching back to the Decky version:
+    <ul>
+      <li>Back up any save files manually otherwise they will be deleted.</li>
+      <li>Uninstall the game from the new version (to free up space).</li>
+      <li>Reinstall the game from within the Decky version of Junk Store.</li>
+      <li>Restore you game save manually.
+    </ul>
+    Tip: Do this before your trial ends — otherwise, you may lose access and the games will still occupy storage.
 </details>
