--- a/_trouble/v2.md
+++ b/_trouble/v2.md
@@ -1,7 +1,7 @@
 ---
 layout: splash
 title: "Troubleshooting"
-permalink: /2.0-troubleshooting/
+permalink: /troubleshooting/v2/
 classes: wide
 header:
   overlay_color: "#000"
