updated FAQ, Troubleshooting and games tested

--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -203,17 +203,17 @@ Issues with Junk Store itself? This section covers general plugin problems — f
 </details>
 
 <details class="troubleshooting-box">
-  <summary>Installed a game on the new version and can't see it in the Decky one?</summary>
+  <summary>I installed a game on the new version and can't see it in the Decky one?</summary>
   <p></p>
     The new version of Junk Store uses a different system, so games installed there won’t show up in the older Decky version — and can’t be moved over.
-  <br>
-  <br>
+    <br>
+    <br>
     If you’re switching back to the Decky version:
     <ul>
       <li>Back up any save files manually otherwise they will be deleted.</li>
       <li>Uninstall the game from the new version (to free up space).</li>
       <li>Reinstall the game from within the Decky version of Junk Store.</li>
-      <li>Restore you game save manually.
+      <li>Restore you game save manually.</li>
     </ul>
     Tip: Do this before your trial ends — otherwise, you may lose access and the games will still occupy storage.
 </details>
