update to navigation, buttons.scss + added script

--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -1,7 +1,7 @@
 ---
 layout: splash
 title: "Troubleshooting"
-permalink: /2.0-troubleshooting/
+permalink: /2.0troubleshooting/
 classes: wide
 header:
   overlay_color: "#000"
