updated tutorials for v2.0

--- a/_pages/tutorials/2.0tutorials.md
+++ b/_pages/tutorials/2.0tutorials.md
@@ -33,8 +33,8 @@ header:
   </div>
 
   <div class="content-box">
-    <h3>Login with OAuth</h3>
-    <p>How to install game depedencies</p>
+    <h3>Install Game Dependencies</h3>
+    <p>How to install game depedencies in Junk Store</p>
     <a href="{{ '/tutorials/installgamedeps' | relative_url }}" class="button">View Guide</a>
   </div>
 
