--- a/_pages/help/v2.0help.md
+++ b/_pages/help/v2.0help.md
@@ -20,7 +20,7 @@ classes: wide
 <section class="where-to-find">
   <h2>Where to Find Junk Store 2.0</h2>
   <p>
-    Junk Store 2.0 is our all-in-one solution with native support for Epic Games, GOG, and Amazon storefronts—no plugins required. Available through our secure portal.
+    Junk Store 2.0 is our all-in-one solution with native support for Epic Games, GOG, and Amazon storefronts Available through our secure portal.
   </p>
   </section>
 
