--- a/_pages/tutorials/2.0tutorials.md
+++ b/_pages/tutorials/2.0tutorials.md
@@ -14,10 +14,12 @@ header:
 <section class="tutorials-welcome">
   <h2>Welcome to Our 'How To' Guides</h2>
   <p>
-    Here you'll find step-by-step tutorials designed to help you get the most out of Junk Store. Whether you're just getting started or looking for advanced tips, these guides cover a wide range of topics — from setup and login to dependencies and troubleshooting.
+     Here you'll find step-by-step tutorials to help you get the most out of Junk Store 2.0 — whether you're just getting started or looking for advanced tips.<br><br>
+
+    Currently, we have guides on installing Junk Store 2.0 and managing game dependencies. More tutorials are coming soon!
   </p>
   <p>
-    Got questions or need a guide we haven’t written yet? Reach out on 
+    Have questions or need a guide we haven’t written yet? Reach out on 
     <a href="https://discord.gg/6mRUhR6Teh" target="_blank" rel="noopener noreferrer">Discord</a> or 
     <a href="https://www.reddit.com/r/JunkStore/" target="_blank" rel="noopener noreferrer">Reddit</a>.
   </p>
