--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -34,6 +34,28 @@ Issues with Junk Store itself? This section covers general plugin problems — f
 </details>
 
 <details class="troubleshooting-box">
+  <summary>Junk Store isn’t working or showing errors after installation?</summary>
+    <p></p>
+    This might be caused by a couple of common issues:
+    <ol>
+      <li><strong>Decky is installed</strong><br>
+        Outdated versions can cause compatibility errors, such as:<br><br>
+        <strong>An error occurred while rendering this content</strong><br>
+        <code>Error reference: shared SteamUI_9871360_fede34d936775239</code>
+        <br><br>
+        Try updating Decky and see if the issue is resolved.<br><br>
+        If you're still having trouble, feel free to reach out on our 
+        <a href="https://discord.gg/6mRUhR6Teh" target="_blank" rel="noopener">Discord server</a>.
+      </li><br>
+      <li><strong>You're using the Steam Beta branch</strong><br>
+        Breakages can happen on Steam Beta due to ongoing codebase changes. We do our best to patch any issues quickly.<br><br>
+        For the most stable experience, we recommend using the <strong>Stable</strong> version of Steam. The Beta branch often includes bugs or breaking changes.<br><br>
+        If you do choose to stay on Steam <em>Beta</em>, we also recommend using the <em>Beta</em> version of Junk Store for better compatibility.
+      </li>
+    </ol>
+</details>
+
+<details class="troubleshooting-box">
   <summary>My game won’t launch after a fresh install. What should I do?</summary>
   <p></p>
     Let’s go through a step-by-step checklist to make sure everything is set up correctly. After each step, try launching the game—this helps identify exactly what fixed the issue (if it does).
