added itch.io support text

--- a/_pages/help/v2.0help.md
+++ b/_pages/help/v2.0help.md
@@ -20,9 +20,9 @@ classes: wide
 
 <!-- Where to Find Junk Store 2.0 -->
 <section class="where-to-find">
-  <h2>Never Leave Game Mode to Play Your Epic, GOG & Amazon Games</h2>
+  <h2>Never Leave Game Mode to Play Your Epic, GOG, Amazon & itch.io (beta) Games</h2>
   <p>
-    Junk Store 2.0 is the only Steam Deck solution that integrates Epic Games, GOG, and Amazon Prime Gaming as natively to Steam as possible - no Desktop Mode switching required. Access everything through our secure member portal.
+    Junk Store 2.0 is the only Steam Deck solution that integrates Epic, GOG, Amazon & itch.io (beta) Prime Gaming as natively to Steam as possible - no Desktop Mode switching required. Access everything through our secure member portal.
   </p>
   <a href="https://portal.junkstore.xyz" class="button" target="_blank" rel="noopener noreferrer">Access Junk Store Portal</a>
 </section>
