Simplifies FAQ/Troubleshooting pages
Refactors FAQ and Troubleshooting pages to use a splash layout.

Removes sidebar navigation and quick navigation sections for a cleaner, more focused user experience.

Adds a note about Patreon/Ko-fi delays for the GOG extension.

Provides a pro tip for finding save file locations using PCGamingWiki.

Clarifies compatdata cleanup after uninstall.

Improves TOC on game testing page

--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -1,11 +1,9 @@
 ---
-layout: single
+layout: splash
 title: "Junk Store 2.0 Troubleshooting"
 description: "Fix Junk Store 2.0 issues for Epic, GOG, Amazon & itch games on Steam Deck. Complete troubleshooting guide for standalone app installation, compatibility, and launch problems."
 permalink: /2.0troubleshooting/
 classes: wide
-sidebar:
-  nav: "troubleshooting-nav"
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
@@ -24,24 +22,6 @@ header:
 - **Follow setup guides:** [Step-by-step tutorials](/2.0tutorials/)
 - **Still need help?** [Discord](https://discord.gg/6mRUhR6Teh) or [Reddit](https://www.reddit.com/r/JunkStore/)
 
-<!-- Quick Navigation Menu -->
-<div class="faq-quick-nav">
-  <h3>🔍 Quick Navigation - Find Your Issue Fast</h3>
-  <div class="nav-grid">
-    <a href="#installation-setup" class="nav-card">
-      <strong>Installation & Setup Issues</strong>
-      <span>Extensions, startup crashes, first-time setup problems</span>
-    </a>
-    <a href="#account-library" class="nav-card">
-      <strong>Account & Library Sync Issues</strong>
-      <span>Missing games, login problems, account synchronization</span>
-    </a>
-    <a href="#launch-performance" class="nav-card">
-      <strong>Game Launch & Performance Problems</strong>
-      <span>Launch failures, compatibility, Proton issues</span>
-    </a>
-  </div>
-</div>
 
 <!-- Search Functionality -->
 <div class="faq-search-container">
