Updated wording on site and added Troubleshooting tip
Updates documentation and game data to reflect the renaming of the "Paid" version of Junk Store 2.0 to the "Professional" version. This change clarifies the product offering and avoids potential confusion.

--- a/_pages/core/2.0-hub.md
+++ b/_pages/core/2.0-hub.md
@@ -33,7 +33,7 @@ classes: wide
   <!-- General FAQ -->
   <div class="content-box faq">
     <h3>Pricing & Setup FAQ</h3>
-    <p>Common questions about our $40/year subscription, 7-day free trial, account setup, and how Junk Store 2.0 compares to free alternatives.</p>
+    <p>Common questions about our $40 annual license, 7-day free trial, account setup, and how Junk Store 2.0 compares to free alternatives.</p>
     <a href="{{ '/2.0faq/' | relative_url }}" class="button">Read FAQ</a>
   </div>
 
