--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -36,6 +36,19 @@ header:
 
 <h2 id="installation-setup">🛠️ Installation & Setup Issues</h2>
 
+<details class="faq-box">
+  <summary>Downloaded executables won't run on Steam Deck</summary>
+  <p><strong>Problem:</strong> Executable files don't run when double-clicked, or open in text editor instead.</p>
+
+  <p><strong>Quick fixes:</strong></p>
+  <ol>
+    <li><strong>File permissions:</strong> Right-click → Properties → Permissions → Enable "Is executable"</li>
+    <li><strong>Theme interference:</strong> Custom icons/themes can break dialogs - switch to default temporarily</li>
+    <li><strong>Console execution:</strong> Right-click → "Run in Konsole" for error details</li>
+  </ol>
+
+  <p><em>Most common cause: Custom icon themes interfering with system dialogs (zenity).</em></p>
+</details>
 
 <details class="faq-box" id="no-extensions">
   <summary>I don't have any extensions—what do I do?</summary>
