updated help pages
Updated styling of help pages to be consistent.
Updated blog post filters to be relevant to posts.

--- a/_pages/core/2.0-hub.md
+++ b/_pages/core/2.0-hub.md
@@ -40,28 +40,28 @@ classes: wide
   <!-- Troubleshooting -->
   <div class="content-box troubleshooting">
     <h3>Fix Common Game Issues</h3>
-    <p>Resolve Epic Games, GOG, and Amazon Prime Gaming problems without leaving Game Mode. From login errors to missing games - all fixed natively in Steam.</p>
+    <p>Resolve Epic Games, GOG, Amazon Prime Gaming & itch.io problems without leaving Game Mode. From login errors to missing games - all fixed natively in Steam.</p>
     <a href="{{ '/2.0troubleshooting/' | relative_url }}" class="button">Get Help</a>
   </div>
 
   <!-- Tutorials -->
   <div class="content-box tutorials">
     <h3>5-Minute Setup Guides</h3>
-    <p>Step-by-step tutorials to get your Epic, GOG, and Amazon games running in Game Mode. Quick setup, library syncing, and advanced configuration options.</p>
+    <p>Step-by-step tutorials to get your Epic, GOG, Amazon & itch.io games running in Game Mode. Quick setup, library syncing, and advanced configuration options.</p>
     <a href="{{ '/2.0tutorials/' | relative_url }}" class="button">View Tutorials</a>
   </div>
 
   <!-- Tested Games -->
   <div class="content-box tested-games">
     <h3>Steam Deck Game Compatibility List</h3>
-    <p>See which Epic Games, GOG, and Amazon Prime Gaming titles work perfectly with Junk Store 2.0. Verified compatibility for 500+ non-Steam games.</p>
+    <p>See which Epic Games, GOG, Amazon Prime Gaming & itch.io titles work perfectly with Junk Store 2.0. Verified compatibility for 500+ non-Steam games.</p>
     <a href="{{ '/tested-games/' | relative_url }}" class="button">View List</a>
   </div>
 
   <!-- Plugin vs Professional Comparison -->
   <div class="content-box">
     <h3>Plugin vs Standalone App</h3>
-    <p>Ready to upgrade? See exactly what the $40/year investment unlocks - from 100 to 1,000 games per tab, advanced features, and professional support. Interactive comparison with live demos.</p>
+    <p>Ready to upgrade? See exactly what the $40 annual license unlocks - from 100 to 1,000 games per tab, advanced features, and professional support. Interactive comparison with live demos.</p>
     <a href="{{ '/comparison/' | relative_url }}" class="button">Compare Features</a>
   </div>
 
