--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -36,7 +36,7 @@ header:
 
 <h2 id="installation-setup">🛠️ Installation & Setup Issues</h2>
 
-<details class="faq-box">
+<details class="faq-box" id="executables-wont-run">
   <summary>Downloaded executables won't run on Steam Deck</summary>
   <p><strong>Problem:</strong> Executable files don't run when double-clicked, or open in text editor instead.</p>
 
