fixed styling for two sections

--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -38,32 +38,32 @@ header:
 
 <details class="faq-box" id="installation-not-completing">
   <summary>Junk Store 2.0 installation fails</summary>
-  <p><strong>Problem:</strong> Installation appears to fail, or Junk Store appears broken after installing.</p>
+  <p></p><strong>Problem:</strong> Installation appears to fail, or Junk Store appears broken after installing.
 
-  <p><strong>CRITICAL:</strong> When installing Junk Store 2.0, you MUST wait until the dialogue box says <strong>"Installation Complete"</strong> before clicking OK. Clicking the OK button too early cancels the installation process.</p>
+  <strong>CRITICAL:</strong> When installing Junk Store 2.0, you MUST wait until the dialogue box says <strong>"Installation Complete"</strong> before clicking OK. Clicking the OK button too early cancels the installation process.
 
-  <p><strong>What to do:</strong></p>
+  <strong>What to do:</strong>
   <ol>
     <li><strong>Wait for completion:</strong> Let the installation dialog run until it specifically shows "Installation Complete"</li>
     <li><strong>Don't click OK early:</strong> The OK button appears before installation finishes - ignore it until completion message shows</li>
     <li><strong>If you clicked too early:</strong> Re-run the installer and wait for the complete message this time</li>
   </ol>
 
-  <p><em>This is the #1 cause of installation issues - incomplete installations due to clicking OK too early.</em></p>
+  <em>This is the #1 cause of installation issues - incomplete installations due to clicking OK too early.</em>
 </details>
 
 <details class="faq-box" id="executables-wont-run">
   <summary>Downloaded executables won't run on Steam Deck</summary>
-  <p><strong>Problem:</strong> Executable files don't run when double-clicked, or open in text editor instead.</p>
+  <p></p><strong>Problem:</strong> Executable files don't run when double-clicked, or open in text editor instead.
 
-  <p><strong>Quick fixes:</strong></p>
+  <strong>Quick fixes:</strong>
   <ol>
     <li><strong>File permissions:</strong> Right-click → Properties → Permissions → Enable "Is executable"</li>
     <li><strong>Theme interference:</strong> Custom icons/themes can break dialogs - switch to default temporarily</li>
     <li><strong>Console execution:</strong> Right-click → "Run in Konsole" for error details</li>
   </ol>
 
-  <p><em>Most common cause: Custom icon themes interfering with system dialogs (zenity).</em></p>
+  <em>Most common cause: Custom icon themes interfering with system dialogs (zenity).</em>
 </details>
 
 <details class="faq-box" id="no-extensions">
