Unifies and redirects tutorial pages
Consolidates tutorial pages into a single section and creates redirects to ensure existing links remain functional.
Updates tutorial links across the site to point to the unified section.
Updates tutorial welcome text.

--- a/_pages/troubleshooting/v2.md
+++ b/_pages/troubleshooting/v2.md
@@ -249,7 +249,7 @@ excerpt: "Fix Epic, GOG, Amazon & itch.io game issues on Steam Deck - all troubl
     Once installed, use either tool to download the latest <strong>GE-Proton</strong> release. After that, you’ll be able to select it as a compatibility option in Junk Store.
     <br>
     <br>
-    Please refer to our <a href="{{ '/plugin_tutorials/' | relative_url }}"> Plugin Tutorials</a> page to see how to change/check your Proton version if you are unsure how to do this.
+    Please refer to our <a href="{{ '/tutorials/' | relative_url }}">Tutorials</a> page to see how to change/check your Proton version if you are unsure how to do this.
 </details>
 
 <details class="faq-box" id="stuck-prelaunch">
